--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,51 +1,50 @@
 {
-    "name": "GBUY - Extension",
-    "version": "3.6.9",
-    "description": "gbuy.cheap | group buy software extension.",
-    "permissions": [ 
-        "storage",
-        "tabs",
-        "management",
-        "proxy",
-        "webRequest",
-        "webRequestBlocking",
-        "declarativeNetRequest",
-        "declarativeNetRequestFeedback",
-        "http://*/*",
-        "https://*/*",
-        "<all_urls>",
-        "cookies",
-        "contextMenus",
-        "nativeMessaging",
-        "browsingData",
-        "*://*.gbuy.cheap/*",
-        "activeTab",
-        "downloads",
-        "debugger"
-    ],
-    "browser_action": {
-        "default_popup": "popup.html",
-        "default_icon": {
-          "16": "favicon.png",
-          "48": "favicon.png",
-          "128": "favicon.png"
-        }
-    },
-    "icons": {
+  "name": "GBUY - Extension",
+  "version": "3.6.9",
+  "description": "ecommerce analyzer tool.",
+  "permissions": [
+    "storage",
+    "tabs",
+    "management",
+    "proxy",
+    "declarativeNetRequest",
+    "declarativeNetRequestFeedback",
+    "cookies",
+    "contextMenus",
+    "nativeMessaging",
+    "browsingData",
+    "activeTab",
+    "downloads",
+    "debugger",
+    "webRequest"
+  ],
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*",
+    "<all_urls>"
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
       "16": "favicon.png",
       "48": "favicon.png",
       "128": "favicon.png"
-    },
-    "manifest_version": 2,
-    "background": {
-        "scripts": ["build/background.js"]
-    },
-    "content_scripts": [
-      {
-        "matches" : ["<all_urls>"],
-        "js": ["script.js"],
-        "run_at" : "document_start",
-        "persistent":false
-      }
-    ]
-  }
+    }
+  },
+  "icons": {
+    "16": "favicon.png",
+    "48": "favicon.png",
+    "128": "favicon.png"
+  },
+  "manifest_version": 3,
+  "background": {
+    "service_worker": "build/background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["script.js"],
+      "run_at": "document_start"
+    }
+  ]
+}
