--- a/defender/manifest.json
+++ b/defender/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "Gbuy - Defender",
-    "description": "Gbuy Defender extension",
+    "name": "ZARMAT",
+    "description": "ZARMAT",
     "version": "2.1.5",
     "manifest_version": 3,
     "action": {
-      "default_title": "Gbuy - Defender",
+      "default_title": "ZARMAT a ecommerce extension",
       "default_icon": "favicon.png",
       "default_popup": "index.html"
     },
